--- a/codecs/oxipng/Cargo.toml
+++ b/codecs/oxipng/Cargo.toml
@@ -13,15 +13,15 @@ oxipng = { version = "3.0.0", default-features = false, features = ["parallel"] 
 wasm-bindgen = "0.2.64"
 log = { version = "0.4", features = ["release_max_level_off"] }
 rayon = { version = "1.3.0", optional = true }
-crossbeam-deque = { version = "0.7.3", optional = true }
 once_cell = { version = "1.3.1", optional = true }
+crossbeam-channel = { version = "0.4.2", optional = true }
 
 [profile.release]
 lto = true
 opt-level = "s"
 
 [features]
-parallel = ["oxipng/parallel", "rayon", "crossbeam-deque", "once_cell"]
+parallel = ["oxipng/parallel", "rayon", "crossbeam-channel", "once_cell"]
 
 [package.metadata.wasm-pack.profile.release]
 wasm-opt = ["-O", "--no-validation"]
