--- a/codecs/webp_enc/package.json
+++ b/codecs/webp_enc/package.json
@@ -2,7 +2,7 @@
   "name": "webp_enc",
   "scripts": {
     "install": "napa",
-    "build": "docker run --rm -v $(pwd):/src trzeci/emscripten ./build.sh"
+    "build": "docker run --rm -v $(pwd):/src trzeci/emscripten-upstream ./build.sh"
   },
   "napa": {
     "libwebp": "webmproject/libwebp#v1.0.2"
