--- a/codecs/imagequant/package.json
+++ b/codecs/imagequant/package.json
@@ -2,7 +2,7 @@
   "name": "imagequant",
   "scripts": {
     "install": "napa",
-    "build": "docker run --rm -v $(pwd):/src trzeci/emscripten ./build.sh"
+    "build": "docker run --rm -v $(pwd):/src trzeci/emscripten-upstream ./build.sh"
   },
   "napa": {
     "libimagequant": "ImageOptim/libimagequant#2.12.1"
