--- a/codecs/avif_enc/package.json
+++ b/codecs/avif_enc/package.json
@@ -2,7 +2,7 @@
   "name": "avif_enc",
   "scripts": {
     "install": "napa",
-    "build": "docker run --rm -v $(pwd):/src trzeci/emscripten ./build.sh"
+    "build": "docker run --rm -v $(pwd):/src trzeci/emscripten-upstream ./build.sh"
   },
   "napa": {
     "libavif": "AOMediaCodec/libavif#v0.5.4"
