--- a/codecs/avif_dec/package.json
+++ b/codecs/avif_dec/package.json
@@ -5,7 +5,8 @@
     "build": "docker run --rm -v $(pwd):/src trzeci/emscripten-upstream ./build.sh"
   },
   "napa": {
-    "libavif": "AOMediaCodec/libavif#v0.7.3"
+    "libavif": "AOMediaCodec/libavif#v0.7.3",
+    "libavif/ext/aom": "git+https://aomedia.googlesource.com/aom#v1.0.0-errata1-avif"
   },
   "devDependencies": {
     "napa": "3.0.0"
