Tweak up compile flags
 - Remove unnecessary `-x c++`.
 - Improve rebuild speed by caching:
   - Remove `-f` from `autoreconf` to reuse generated configure scripts.
   - Remove `--rm` from `docker run` to avoid rebuilding Emscripten stdlib.
   - Add `-C` to `./configure` to reuse stored information about `emcc`.
   - Remove `rm -rf build` from WebP encoder/decoder.

--- a/codecs/webp_dec/package.json
+++ b/codecs/webp_dec/package.json
@@ -2,7 +2,7 @@
   "name": "webp_dec",
   "scripts": {
     "install": "napa",
-    "build": "docker run --rm -v $(pwd):/src trzeci/emscripten-upstream ./build.sh"
+    "build": "docker run -v $(pwd):/src trzeci/emscripten-upstream ./build.sh"
   },
   "napa": {
     "libwebp": "webmproject/libwebp#v1.0.2"
