--- a/codecs/hqx/package.json
+++ b/codecs/hqx/package.json
@@ -2,6 +2,6 @@
   "name": "hqx",
   "scripts": {
     "build:image": "docker build -t squoosh-hqx .",
-    "build": "docker run --rm -v $(pwd):/src squoosh-hqx ./build.sh"
+    "build": "docker run -v $(pwd):/src squoosh-hqx ./build.sh"
   }
 }
