Further speed improvements
 - Store Emscripten cache inside node_modules/.em_cache. Docker image ships without LTO libs, so Emscripten has to rebuild stdlibs on every build otherwise.
 - Merge webp_enc + webp_dec build scripts. Core libwebp library is same in both cases, so there's no point in storing and building two copies of it.

--- a/codecs/webp/package.json
+++ b/codecs/webp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webp_enc",
+  "name": "webp",
   "scripts": {
     "install": "napa",
     "build": "docker run -v $(pwd):/src trzeci/emscripten-upstream ./build.sh"
