Revert `docker run --rm` change

--- a/codecs/oxipng/package.json
+++ b/codecs/oxipng/package.json
@@ -2,6 +2,6 @@
   "name": "oxipng",
   "scripts": {
     "build:image": "docker build -t squoosh-oxipng .",
-    "build": "docker run -v $(pwd):/src squoosh-oxipng ./build.sh"
+    "build": "docker run --rm -v $(pwd):/src squoosh-oxipng ./build.sh"
   }
 }
