--- a/codecs/oxipng/pkg/package.json
+++ b/codecs/oxipng/pkg/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "oxipng",
+  "name": "squoosh-oxipng",
   "collaborators": [
     "Ingvar Stepanyan <me@rreverser.com>"
   ],
   "version": "0.1.0",
   "files": [
-    "oxipng_bg.wasm",
-    "oxipng.js",
-    "oxipng.d.ts"
+    "squoosh_oxipng_bg.wasm",
+    "squoosh_oxipng.js",
+    "squoosh_oxipng.d.ts"
   ],
-  "module": "oxipng.js",
-  "types": "oxipng.d.ts",
+  "module": "squoosh_oxipng.js",
+  "types": "squoosh_oxipng.d.ts",
   "sideEffects": false
 }
