Consolidate Rust builds
This consolidates Rust build process for various codecs into a single top-level image that is built once and reused.

This ensures that we use same version of tools across codecs (now controlled from a single place), simplifies build configs and commands, speeds up common builds and reduces disk space taken by Docker images by reusing same one.

Additionally, this PR renames all codecs to squoosh-* to work around the https://github.com/rustwasm/wasm-pack/issues/829 (which has been already fixed on master of wasm-pack but not released in a while), as well as adds `publish = false` to Cargo.toml to avoid accidental publishing for now.

I'm planning to do similar for Emscripten in a separate PR, although abilities to share configs there are much more limited due to lack of package manager in C++.

--- a/codecs/hqx/pkg/package.json
+++ b/codecs/hqx/pkg/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "squooshhqx",
+  "name": "squoosh-hqx",
   "collaborators": [
     "Surma <surma@surma.link>"
   ],
   "version": "0.1.0",
   "files": [
-    "squooshhqx_bg.wasm",
-    "squooshhqx.js",
-    "squooshhqx.d.ts"
+    "squoosh_hqx_bg.wasm",
+    "squoosh_hqx.js",
+    "squoosh_hqx.d.ts"
   ],
-  "module": "squooshhqx.js",
-  "types": "squooshhqx.d.ts",
-  "sideEffects": "false"
+  "module": "squoosh_hqx.js",
+  "types": "squoosh_hqx.d.ts",
+  "sideEffects": false
 }
