--- a/codecs/hqx/Cargo.toml
+++ b/codecs/hqx/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
-name = "squooshhqx"
+name = "squoosh-hqx"
 version = "0.1.0"
 authors = ["Surma <surma@surma.link>"]
+publish = false
 
 [lib]
 crate-type = ["cdylib"]
