--- a/codecs/hqx/package.json
+++ b/codecs/hqx/package.json
@@ -1,7 +1,6 @@
 {
   "name": "hqx",
   "scripts": {
-    "build:image": "docker build -t squoosh-hqx .",
-    "build": "docker run --rm -v $(pwd):/src squoosh-hqx ./build.sh"
+    "build": "../build-rust.sh"
   }
 }
