--- a/codecs/oxipng/package.json
+++ b/codecs/oxipng/package.json
@@ -1,7 +1,6 @@
 {
   "name": "oxipng",
   "scripts": {
-    "build:image": "docker build -t squoosh-oxipng .",
-    "build": "docker run --rm -v $(pwd):/src squoosh-oxipng ./build.sh"
+    "build": "../build-rust.sh"
   }
 }
