--- a/codecs/rotate/Cargo.toml
+++ b/codecs/rotate/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
-name = "rotate"
+name = "squoosh-rotate"
 version = "0.1.0"
 authors = ["Surma <surma@google.com>"]
 edition = "2018"
+publish = false
 
 [lib]
 name = "rotate"
