--- a/codecs/rotate/package.json
+++ b/codecs/rotate/package.json
@@ -1,8 +1,7 @@
 {
   "name": "rotate",
   "scripts": {
-    "build:image": "docker build -t squoosh-rotate .",
-    "build": "docker run --rm -v $(pwd):/src squoosh-rotate ./build.sh",
+    "build": "../build-rust.sh ./build.sh",
     "benchmark": "echo File size after gzip && npm run benchmark:filesize && echo Optimizing && npm run -s benchmark:optimizing",
     "benchmark:baseline": "v8 --liftoff --no-wasm-tier-up --no-opt ./benchmark.js",
     "benchmark:optimizing": "v8 --no-liftoff --no-wasm-tier-up ./benchmark.js",
