--- a/codecs/oxipng/Cargo.toml
+++ b/codecs/oxipng/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "oxipng"
+name = "squoosh-oxipng"
 version = "0.1.0"
 authors = ["Ingvar Stepanyan <me@rreverser.com>"]
 edition = "2018"
@@ -9,8 +9,8 @@ publish = false
 crate-type = ["cdylib"]
 
 [dependencies]
-oxipng = { version = "2.3.0", default-features = false }
-wasm-bindgen = "0.2.48"
+oxipng = { version = "3.0.0", default-features = false }
+wasm-bindgen = "0.2.64"
 log = { version = "0.4", features = ["release_max_level_off"] }
 
 [profile.release]
