Fix windows builds breaking due to mixed paths

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "minimatch": "3.0.4",
     "node-fetch": "2.6.0",
     "node-sass": "4.13.0",
+    "normalize-path": "^3.0.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pointer-tracker": "2.0.3",
     "preact": "8.4.2",
