--- a/codecs/webp/package.json
+++ b/codecs/webp/package.json
@@ -2,7 +2,7 @@
   "name": "webp",
   "scripts": {
     "install": "napa",
-    "build": "docker run --rm -v $(pwd):/src trzeci/emscripten-upstream ./build.sh"
+    "build": "../build-cpp.sh"
   },
   "napa": {
     "libwebp": "webmproject/libwebp#v1.0.2"
