--- a/codecs/hqx/Dockerfile
+++ b/codecs/hqx/Dockerfile
@@ -1,4 +1,6 @@
-FROM rust
+# This is intentionally an old version of Rust. Newer versions
+# generate _significantly_ bigger Wasm binaries.
+FROM rust:1.37
 RUN rustup target add wasm32-unknown-unknown
 RUN curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
 
