--- a/codecs/hqx/package.json
+++ b/codecs/hqx/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hqx",
   "scripts": {
-    "build:image": "docker build -t squoosh-hqx .",
+    "build:image": "docker build -t squoosh-hqx - < Dockerfile",
     "build": "docker run --rm -v $(pwd):/src squoosh-hqx ./build.sh"
   }
 }
