--- a/codecs/avif/Makefile
+++ b/codecs/avif/Makefile
@@ -42,6 +42,7 @@ $(LIBAOM_OUT): $(LIBAOM_DIR)/CMakeLists.txt
 		-DAOM_TARGET_CPU=generic \
 		-DENABLE_DOCS=0 \
 		-DENABLE_TESTS=0 \
+		-DENABLE_EXAMPLES=0 \
 		-DCONFIG_ACCOUNTING=1 \
 		-DCONFIG_INSPECTION=0 \
 		-DCONFIG_MULTITHREAD=0 \
