--- a/package.json
+++ b/package.json
@@ -15,6 +15,15 @@
       "pre-commit": "npm run lint"
     }
   },
+  "postcss": {
+    "modules": true,
+    "plugins": {
+      "postcss-modules": {
+        "localsConvention": "camelCaseOnly",
+        "generateScopedName": "[name]__[local]"
+      }
+    }
+  },
   "devDependencies": {
     "@types/node": "10.14.15",
     "@types/pretty-bytes": "5.1.0",
@@ -48,12 +57,14 @@
     "normalize-path": "^3.0.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pointer-tracker": "2.0.3",
+    "postcss-modules": "^3.2.0",
     "preact": "8.4.2",
     "prerender-loader": "1.3.0",
     "pretty-bytes": "5.3.0",
     "progress-bar-webpack-plugin": "1.12.1",
     "raw-loader": "3.1.0",
     "readdirp": "3.1.2",
+    "sass": "^1.26.10",
     "sass-loader": "7.3.1",
     "script-ext-html-webpack-plugin": "2.1.4",
     "source-map-loader": "0.2.4",
