--- a/cli/package.json
+++ b/cli/package.json
@@ -2,15 +2,22 @@
   "name": "cli",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "bin": {
+    "squoosh-cli": "build/index.js"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rollup -c"
   },
   "keywords": [],
   "author": "Surma <surma@surma.dev>",
   "license": "Apache-2.0",
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
+    "@rollup/plugin-commonjs": "^15.0.0",
+    "@rollup/plugin-node-resolve": "^9.0.0",
     "commander": "^6.0.0",
-    "json5": "^2.1.3"
+    "json5": "^2.1.3",
+    "rollup": "^2.26.11",
+    "rollup-plugin-terser": "^7.0.2"
   }
 }
