--- a/codecs/avif/Makefile
+++ b/codecs/avif/Makefile
@@ -13,11 +13,11 @@ LIBAOM_URL = https://aomedia.googlesource.com/aom/+archive/v2.0.0.tar.gz
 LIBAOM_PACKAGE = node_modules/libaom.tar.gz
 
 LIBAOM_ENC_DIR := $(CODEC_ENC_DIR)/ext/aom
-LIBAOM_ENC_BUILD_DIR := $(LIBAOM_ENC_DIR)/build-enc.libavif
+LIBAOM_ENC_BUILD_DIR := $(LIBAOM_ENC_DIR)/build.libavif
 LIBAOM_ENC_OUT := $(LIBAOM_ENC_BUILD_DIR)/libaom.a
 
 LIBAOM_DEC_DIR := $(CODEC_DEC_DIR)/ext/aom
-LIBAOM_DEC_BUILD_DIR := $(LIBAOM_DEC_DIR)/build-dec.libavif
+LIBAOM_DEC_BUILD_DIR := $(LIBAOM_DEC_DIR)/build.libavif
 LIBAOM_DEC_OUT := $(LIBAOM_DEC_BUILD_DIR)/libaom.a
 
 OUT_ENC_JS = enc/avif_enc.js
@@ -27,6 +27,32 @@ OUT_ENC_WASM = $(OUT_ENC_JS:.js=.wasm)
 OUT_DEC_JS = dec/avif_dec.js
 OUT_DEC_CPP = $(OUT_DEC_JS:.js=.cpp)
 OUT_DEC_WASM = $(OUT_DEC_JS:.js=.wasm)
+
+EMSCRIPTEN_FLAGS = --bind \
+	--closure 1 \
+	-s ALLOW_MEMORY_GROWTH=1 \
+	-s MODULARIZE=1 \
+	-s ERROR_ON_UNDEFINED_SYMBOLS=0
+
+CODEC_EMCMAKE = emcmake cmake \
+	-DCMAKE_BUILD_TYPE=Release \
+	-DBUILD_SHARED_LIBS=0 \
+	-DAVIF_CODEC_AOM=1 \
+	-DAVIF_LOCAL_AOM=1 \
+	../
+
+LIBAOM_FLAGS = -DCMAKE_BUILD_TYPE=Release \
+	-DENABLE_CCACHE=0 \
+	-DAOM_TARGET_CPU=generic \
+	-DENABLE_DOCS=0 \
+	-DENABLE_TESTS=0 \
+	-DENABLE_EXAMPLES=0 \
+	-DENABLE_TOOLS=0 \
+	-DCONFIG_ACCOUNTING=1 \
+	-DCONFIG_INSPECTION=0 \
+	-DCONFIG_MULTITHREAD=0 \
+	-DCONFIG_RUNTIME_CPU_DETECT=0 \
+	-DCONFIG_WEBM_IO=0
 
 .PHONY: all clean
 
@@ -38,12 +64,8 @@ $(OUT_ENC_JS): $(OUT_ENC_CPP) $(LIBAOM_ENC_OUT) $(CODEC_ENC_OUT)
 		-I $(CODEC_ENC_DIR)/include \
 		${CXXFLAGS} \
 		${LDFLAGS} \
-		--bind \
-		--closure 1 \
-		-s ALLOW_MEMORY_GROWTH=1 \
-		-s MODULARIZE=1 \
+		${EMSCRIPTEN_FLAGS} \
 		-s 'EXPORT_NAME="$(basename $(@F))"' \
-		-s ERROR_ON_UNDEFINED_SYMBOLS=0 \
 		-o $@ \
 		$+
 
@@ -53,53 +75,28 @@ $(OUT_DEC_JS): $(OUT_DEC_CPP) $(LIBAOM_DEC_OUT) $(CODEC_DEC_OUT)
 		-I $(CODEC_DEC_DIR)/include \
 		${CXXFLAGS} \
 		${LDFLAGS} \
-		--bind \
-		--closure 1 \
-		-s ALLOW_MEMORY_GROWTH=1 \
-		-s MODULARIZE=1 \
+		${EMSCRIPTEN_FLAGS} \
 		-s 'EXPORT_NAME="$(basename $(@F))"' \
-		-s ERROR_ON_UNDEFINED_SYMBOLS=0 \
 		-o $@ \
 		$+
 
 $(CODEC_ENC_OUT): $(CODEC_ENC_DIR)/CMakeLists.txt $(LIBAOM_ENC_OUT)
 	mkdir -p $(CODEC_ENC_BUILD_DIR)
 	cd $(CODEC_ENC_BUILD_DIR) && \
-	emcmake cmake \
-		-DCMAKE_BUILD_TYPE=Release \
-		-DBUILD_SHARED_LIBS=0 \
-		-DAVIF_CODEC_AOM=1 \
-		-DAVIF_LOCAL_AOM=1 \
-		../ && \
+	$(CODEC_EMCMAKE) && \
 	$(MAKE)
 
 $(CODEC_DEC_OUT): $(CODEC_DEC_DIR)/CMakeLists.txt $(LIBAOM_DEC_OUT)
 	mkdir -p $(CODEC_DEC_BUILD_DIR)
 	cd $(CODEC_DEC_BUILD_DIR) && \
-	emcmake cmake \
-		-DCMAKE_BUILD_TYPE=Release \
-		-DBUILD_SHARED_LIBS=0 \
-		-DAVIF_CODEC_AOM=1 \
-		-DAVIF_LOCAL_AOM=1 \
-		../ && \
+	$(CODEC_EMCMAKE) && \
 	$(MAKE)
 
 $(LIBAOM_ENC_OUT): $(LIBAOM_ENC_DIR)/CMakeLists.txt
 	mkdir -p $(LIBAOM_ENC_BUILD_DIR)
 	cd $(LIBAOM_ENC_BUILD_DIR) && \
 	emcmake cmake \
-		-DCMAKE_BUILD_TYPE=Release \
-		-DENABLE_CCACHE=0 \
-		-DAOM_TARGET_CPU=generic \
-		-DENABLE_DOCS=0 \
-		-DENABLE_TESTS=0 \
-		-DENABLE_EXAMPLES=0 \
-		-DENABLE_TOOLS=0 \
-		-DCONFIG_ACCOUNTING=1 \
-		-DCONFIG_INSPECTION=0 \
-		-DCONFIG_MULTITHREAD=0 \
-		-DCONFIG_RUNTIME_CPU_DETECT=0 \
-		-DCONFIG_WEBM_IO=0 \
+		$(LIBAOM_FLAGS)
 		-DCONFIG_AV1_DECODER=0 \
 		-DCONFIG_AV1_HIGHBITDEPTH=0 \
 		../ && \
@@ -109,18 +106,7 @@ $(LIBAOM_DEC_OUT): $(LIBAOM_DEC_DIR)/CMakeLists.txt
 	mkdir -p $(LIBAOM_DEC_BUILD_DIR)
 	cd $(LIBAOM_DEC_BUILD_DIR) && \
 	emcmake cmake \
-		-DCMAKE_BUILD_TYPE=Release \
-		-DENABLE_CCACHE=0 \
-		-DAOM_TARGET_CPU=generic \
-		-DENABLE_DOCS=0 \
-		-DENABLE_TESTS=0 \
-		-DENABLE_EXAMPLES=0 \
-		-DENABLE_TOOLS=0 \
-		-DCONFIG_ACCOUNTING=1 \
-		-DCONFIG_INSPECTION=0 \
-		-DCONFIG_MULTITHREAD=0 \
-		-DCONFIG_RUNTIME_CPU_DETECT=0 \
-		-DCONFIG_WEBM_IO=0 \
+		$(LIBAOM_FLAGS)
 		-DCONFIG_AV1_ENCODER=0 \
 		../ && \
 	$(MAKE)
@@ -132,18 +118,18 @@ $(LIBAOM_ENC_DIR)/CMakeLists.txt: $(LIBAOM_ENC_DIR)
 $(LIBAOM_DEC_DIR)/CMakeLists.txt: $(LIBAOM_DEC_DIR)
 
 $(CODEC_PACKAGE):
-  curl -sL $(CODEC_URL) -o $@
+	curl -sL $(CODEC_URL) -o $@
 
 $(LIBAOM_PACKAGE):
-  curl -sL $(LIBAOM_URL) -o $@
+	curl -sL $(LIBAOM_URL) -o $@
 
 $(CODEC_ENC_DIR) $(CODEC_DEC_DIR): $(CODEC_PACKAGE)
 	mkdir -p $@
-	tar xz --strip 1 -C $@ $(CODEC_PACKAGE)
+	tar xz --strip 1 -C $@ -f $(CODEC_PACKAGE)
 
 $(LIBAOM_ENC_DIR) $(LIBAOM_DEC_DIR): $(LIBAOM_PACKAGE)
 	mkdir -p $@
-	tar xz -C $@ $(LIBAOM_PACKAGE)
+	tar xz -C $@ -f $(LIBAOM_PACKAGE)
 
 clean:
 	$(RM) $(LIBAOM_PACKAGE) $(CODEC_PACKAGE) $(OUT_ENC_JS) $(OUT_ENC_WASM) $(OUT_DEC_JS) $(OUT_DEC_WASM)
