Update wasm-bindgen version

--- a/codecs/png/Cargo.toml
+++ b/codecs/png/Cargo.toml
@@ -10,14 +10,8 @@ crate-type = ["cdylib"]
 
 [dependencies]
 png = "0.16.7"
-# wasm-bindgen 0.2.66+ emits Wasm using exported mutable globals,
-# which is a stage 4 feature and not well supported.
-# https://github.com/rustwasm/wasm-pack/issues/886
-wasm-bindgen = "=0.2.65"
-# Need to pin web-sys to 0.3.42, because newer versions depend
-# on newer versions of wasm-bindgen.
-web-sys = { version = "=0.3.42", features = ["ImageData"] }
-log = { version = "0.4", features = ["release_max_level_off"] }
+wasm-bindgen = "0.2.68"
+web-sys = { version = "0.3.45", features = ["ImageData"] }
 
 [profile.release]
 lto = true
