--- a/src/client/tsconfig.json
+++ b/src/client/tsconfig.json
@@ -4,5 +4,5 @@
     "lib": ["esnext", "dom", "dom.iterable"],
     "types": []
   },
-  "references": [{ "path": "../image-worker" }]
+  "references": [{ "path": "../features/worker" }]
 }
