Client/shared/worker split for resize

--- a/generic-tsconfig.json
+++ b/generic-tsconfig.json
@@ -15,6 +15,7 @@
     "allowSyntheticDefaultImports": true,
     "paths": {
       "static-build/*": ["src/static-build/*"],
+      "client/*": ["src/client/*"],
       "features/*": ["src/features/*"]
     }
   }
