Multithread AVIF PoC

--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "mini-css-extract-plugin": "0.8.0",
     "minimatch": "3.0.4",
     "node-fetch": "2.6.0",
-    "node-sass": "4.13.0",
+    "node-sass": "4.14.1",
     "normalize-path": "^3.0.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pointer-tracker": "2.0.3",
@@ -68,6 +68,7 @@
     "typed-css-modules": "0.4.2",
     "typescript": "3.5.3",
     "url-loader": "2.1.0",
+    "wasm-feature-detect": "^1.2.9",
     "webpack": "4.39.3",
     "webpack-bundle-analyzer": "3.4.1",
     "webpack-cli": "3.3.4",
